Change System Bar Colors

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.ComposeTest2" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.ComposeTest2" parent="android:Theme.Material.Light.NoActionBar">
+        <!--<item name="android:statusBarColor">@color/purple_500</item>
+        <item name="android:navigationBarColor">@color/purple_500</item>-->
+    </style>
 </resources>
